# credentials

./: .annotation_safe_list.yml  .babelrc  .bowerrc  .coveragerc  .dockerignore  .eslintignore  .eslintrc.json  .gitignore  .isort.cfg  .jscsrc  .pep8  .readthedocs.yaml  .travis.yml  AUTHORS  Dockerfile  Dockerfile-testing  Makefile  README.rst  babel.config.js  bower.json  build.js  catalog-info.yaml  codecov.yml  credentials_gunicorn.py  db_keyword_overrides.yml  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.travis.yml  docker-compose.yml  gulpfile.js  jest-config.json  karma.conf.js  manage.py  minimal.yml  mypy.ini  openedx.yaml  overview.rst  package-lock.json  package.json  pylintrc  (+9 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.travis/: docker-compose-travis.yml  run_coverage.sh  run_tests.sh
.tx/: config
acceptance_tests/: config.py  mixins.py  pages.py  provision.sh  runserver.sh  runtests.sh  test_auth.py  test_certificate.py  test_credentials.py  test_records.py  test_rendering.py
configuration_files/: credentials.conf  supervisor.conf  supervisorctl
credentials/: custom_static_storage.py  docker_gunicorn_configuration.py  urls.py  views.py  wsgi.py
docs/: Makefile  analytics.rst  asset_pipeline.rst  conf.py  configuring_certificates.rst  credential_api.rst  credentials_admin.rst  credentials_api.rst  credit_pathways.rst  edx_extensions.rst  event_bus.rst  getting_started.rst  index.rst  internationalization.rst  learner_records.rst  lms_user_id.rst  overview.rst  pathways.rst  program_completion_emails.rst  (+4 more)
(+1218 files in other folders)
