[project]
name = "credentials"
dynamic = ["version"]

[tool.black]
line-length = 120
exclude = '(node_modules|private.py|migrations)'

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
known_first_party = ["credentials"]
combine_as_imports = true
skip = ["migrations", "settings"]
include_trailing_comma = true

[tool.setuptools]
packages = ["credentials"]
